--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,7 @@
 export(cal_to_fisc_per)
 export(cal_to_fisc_wk)
 export(get_ver)
+export(load_zip)
 export(rs_by_var)
 export(save_time_stamped)
+export(save_zip)
