--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(cal_to_fisc_wk)
 export(get_ver)
 export(load_zip)
 export(rs_by_var)
+export(rs_by_var_2)
 export(save_time_stamped)
 export(save_zip)
