adding cal_to_fisc_wk_end_dt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(arrange_vars)
 export(cal_to_fisc_per)
 export(cal_to_fisc_wk)
 export(cal_to_fisc_wk_bgn_dt)
+export(cal_to_fisc_wk_end_dt)
 export(get_fisc_wk)
 export(get_ver)
 export(load_zip)
