--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Chrctr_Crrnt_Dttme)
 export(analyze_logs)
 export(arrange_vars)
+export(better_summary)
 export(cal_to_fisc_per)
 export(cal_to_fisc_wk)
 export(cal_to_fisc_wk_bgn_dt)
